# decentralized-machine-learning

./: README.md  deploy_contract.py  env-example  pyproject.toml
contracts/: Coordinator.json  Coordinator.sol  SLCoordinator.json  SLCoordinator.sol
src/: ipfs_utils.py  node.py  utils.py
