[tool.poetry]
name = "flchain-decentralized-1"
version = "0.1.0"
description = "Decentralized ML model with Hyperledger Besu and IPFS"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.2.0"
web3 = "^6.0.0"
ipfshttpclient = "^0.8.0"
python-dotenv = "^1.0.0"
numpy = "^1.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"